--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/Baidu-AIP/nodejs-sdk.git"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "debug": "^2.6.0",
     "iconv-lite": "^0.4.15",
