--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "baidu-aip-sdk-ts",
+    "name": "baidu-aip-sdk-tsd",
     "version": "2.3.10",
     "description": "百度AI开放平台Nodejs SDK, 文档以及详情请访问官网: https://ai.baidu.com，已重新构成typescript",
     "main": "src/index.js",
